# credit-scout

./: .gitignore  README.md  env.example  pyproject.toml  run.py  run_credit_scout.py  test_agent.py
.github/copilot/: instructions.md
.github/workflows/: ci.yml
examples/: analyze_movie_example.py
scripts/: test_functions.py
src/credit_scout/: __init__.py  __version__.py  cli_agent.py  main.py  movie_analysis_agent.py
src/credit_scout/tools/: __init__.py  detect_intro_end_time.py  detect_intro_times.py  detect_outro_start_time.py  encode_intro_segment.py  encode_outro_segment.py  get_video_duration.py  save_analysis_results.py
src/project/: main.py
test_movies/: 01_tears_of_steel_20250525_124902.json  02_bbb_analysis_20250525_143033.json  03_charge_analysis_20250525_144100.json  04_elephants_dream_analysis_20250525_142706.json  05_sintel_analysis_20250525_142304.json  06_sprite_fright_analysis_20250525_143318.json  07_wingit_analysis_20250525_143642.json  08_caminandes_ llamigos_analysis_20250525_144438.json  09_agent327_analysis_20250525_144716.json  10_cosmos_aundromat_analysis_20250525_145434.json  create_table.py  results_summary.md  results_table.html
tests/: test_detect_intro_end_time.py  test_detect_intro_end_times.py  test_project.py  test_save_analysis_results.py  test_save_analysis_results_standalone.py  test_video_encoding.py
tests/test_data/: README.md  sample_video_analysis_20250525_124902.json
